* BUG#6993 Removing simple json import
* BUG#6811 Do not switch to list view when creating a new address
* OTH#0000 Avoid adresse duplication when duplicate or import a party
* FIX#0000 Fix 'all_addresses' field in party form view
* FEA#6130 Improve "REFLEX" flag by using the  active/inactive field on addresses
* BUG#6423 Display : full address field holds in one line
* BUG#6366 Add control on party birth date 
* FEA#6310 Improve the return to sender flag using active/inactive field on addresses

Version 1.12 - 2017-04-28
* FEA#0000 Merge party functionality
* FEA#0000 Add long gender field

Version 1.10 - 2016-11-02
* FEA#0000 Allow to search party from SSN information
* FEA#0000 Behaviour change : A party is either a company (by default) or a person but it can not be both anymore

Version 1.8 - 2016-07-06
* FEA#0000 Allow to extend party identifier type possible values through configuration

Version 1.6 - 2015-12-23
* FEA#0000 Remove contact from party when deleted
* FEA#0000 Add party identifier

Version 1.4 - 2015-05-29

Version 1.3 - 2015-01-22
* FEA#0000 Add child / parent relation
* FEA#0000 Add relation editable tree

Version 1.2 - 2014-07-01
* FEA#0000 Changelog file creation