@@ -1,3 +1,4 @@
+* FEA#7191 Ajout de la séquence par défaut sur les tiers
 * BUG#6993 Suppression de l'import simplejson
 * BUG#6811 Eviter le passage en vue liste à la création d'une nouvelle adresse
 * OTH#0000 La duplication ou l'import de tiers ne créé plus d'adresse en trop
